set connect db& set api

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+.react-calendar {
+  border: none !important;
+}
+.react-calendar .react-calendar__navigation__prev2-button,
+.react-calendar__navigation__next2-button {
+  display: none;
+}
+.react-calendar button {
+  border-radius: 100px !important;
+}
+.react-calendar__tile {
+  padding: 16px 6.6667px !important;
+}
+.react-calendar__navigation {
+  justify-content: center !important;
+}
+.react-calendar__navigation__label {
+  flex-grow: 0.1 !important;
+}
+.overflow-y-auto::-webkit-scrollbar {
+  display: none !important;
+}
